fix(hc): increase bg contrast

--- a/data/style-hc.css
+++ b/data/style-hc.css
@@ -21,4 +21,5 @@ clapper-gtk-lead-container>box {
 
 .grouped-icon {
 	box-shadow: inset 0 0 0 1px var(--border-color);
+	background-color: color-mix(in srgb, currentColor 5%, transparent);
 }
